temp: add project data json for pull

--- a/backend/data/projects.json
+++ b/backend/data/projects.json
@@ -1,5 +1,86 @@
 [
   {
+    "id": 1766377620626,
+    "title": "dfdf",
+    "description": "dfdf",
+    "stack": [
+      "dfdf"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
+    "id": 1766377605267,
+    "title": "test",
+    "description": "ㄷㄴ",
+    "stack": [
+      "ㄴㅇㄹ"
+    ],
+    "github_url": "https://github.com/"
+  },
+  {
+    "id": 1766376629807,
+    "title": "test",
+    "description": "test",
+    "stack": [
+      "test"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
+    "id": 1766376573038,
+    "title": "test",
+    "description": "test",
+    "stack": [
+      "test"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
+    "id": 1766376561987,
+    "title": "ㅇ",
+    "description": "ㅇ",
+    "stack": [
+      "ㅇ"
+    ],
+    "github_url": "https://github.com/"
+  },
+  {
+    "id": 1766376460796,
+    "title": "test",
+    "description": "test",
+    "stack": [
+      "test"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
+    "id": 1766376280242,
+    "title": "test",
+    "description": "tsest",
+    "stack": [
+      "test"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
+    "id": 1766376247574,
+    "title": "테스트 프로젝트",
+    "description": "test",
+    "stack": [
+      "test"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
+    "id": 1766376234489,
+    "title": "테스트 프로젝트",
+    "description": "테스트",
+    "stack": [
+      "테스트"
+    ],
+    "github_url": "https://github.com/cjang3285"
+  },
+  {
     "id": 1766211069098,
     "title": "dasdsa",
     "description": "adfdaf",
