refactor: centralize configuration, data, and deployment files
This commit implements a major project refactoring:

- Centralized backend config into a root /config directory.
- Consolidated .env.example at the project root and made frontend API URLs configurable.
- Migrated the conferences feature from a JSON file to the PostgreSQL database.
- Removed the legacy ackend/data directory and unused JSON files.
- Grouped all deployment-related scripts and configs into a root /deployment directory.

This improves maintainability, separates concerns, and makes the project structure cleaner and more professional.

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ FRONTEND_URL=http://localhost:4321
 # Trusted IPs for auto-authentication (comma-separated)
 # localhost is always trusted, add additional IPs if needed
 TRUSTED_IPS=
+
+# Frontend Configuration (must be prefixed with PUBLIC_ for Astro)
+PUBLIC_API_URL=http://localhost:3000
